Changed deprecated Integer constructor usage to Integer.valueOf